--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
     text-decoration: 0;
     list-style: none;
 }
+html{
+    scroll-behavior: smooth;
+}
 
 .body {
     height: 100vh;
@@ -74,6 +77,12 @@
 
 .barr {
     font-size: 0px;
+}
+
+.nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .hide2 {
@@ -460,18 +469,20 @@ h2 li {
     display: flex;
     flex-wrap: wrap;
 }.share a{
-    height: 2.2rem;
-    width: 2.2rem;
+    height: 1.5rem;
+    width: 1.5rem;
     padding: 0.5rem;
     text-align: center;
     border-radius: 50%;
-    font-size: 1rem;
+    font-size: 1.3rem;
     margin-right: 1rem;
     transition: 0.3s;
     background: rgb(230, 230, 230);
     color: #02094b;
     border: none;
-}.share a:hover{
+}
+
+.share a:hover{
     background: transparent;
     transform: scale(0.9);
     border: 0.1rem solid rgb(180, 178, 178);
